--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A simple forum website ready for Google AdSense verification.">
-    <meta name="keywords" content="forum, discussion, adsense, blog">
+    <meta name="description" content="Welcome to Forum Hub - A space for gamers and enthusiasts">
+    <meta name="keywords" content="forum, gaming, community">
     <meta name="author" content="Your Name">
-    <title>Forum Hub</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Forum Hub - Home</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            line-height: 1.6;
+            background-color: #f4f4f9;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f9;
+            line-height: 1.6;
         }
         header {
             background: #333;
@@ -37,14 +36,13 @@
         .container {
             width: 80%;
             margin: auto;
-            overflow: hidden;
             padding: 2rem 0;
         }
-        .footer {
-            text-align: center;
-            padding: 1rem 0;
+        footer {
             background: #333;
             color: #fff;
+            text-align: center;
+            padding: 1rem 0;
             margin-top: 2rem;
         }
     </style>
@@ -52,24 +50,19 @@
 <body>
     <header>
         <h1>Welcome to Forum Hub</h1>
-        <p>Your space to share knowledge and connect with others</p>
     </header>
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+        <a href="gaming.html">Gaming</a>
     </nav>
     <div class="container">
-        <h2>Recent Discussions</h2>
-        <ul>
-            <li><a href="#">How to improve coding skills?</a></li>
-            <li><a href="#">Best practices for website SEO</a></li>
-            <li><a href="#">Tips for better productivity</a></li>
-        </ul>
-        <p>Join the conversation! Share your insights or ask questions to the community.</p>
+        <h2>Discover, Connect, and Engage</h2>
+        <p>Forum Hub is your go-to platform for connecting with people who share your passions. Whether you're a gamer, a tech enthusiast, or simply looking for a place to share ideas, our forum has something for you.</p>
+        <p>Join discussions, learn new strategies, and share your knowledge with our vibrant community!</p>
     </div>
-    <div class="footer">
+    <footer>
         <p>&copy; 2025 Forum Hub. All rights reserved.</p>
-    </div>
+    </footer>
 </body>
 </html>
